<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/nav_header_main"
                    android:id="@+id/nav_drawer_header_include"/>
            
                <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/nav_drawer_header_include"
                        android:id="@+id/channel_list">


                </ListView>


        </RelativeLayout>
    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>
