...
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/profiledefault"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/userImageNavHeader"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginBtnNavHeader"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
